# zkevm-test-monitor

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEBUG_WORKFLOW.md  Dockerfile  HACK_TRACKING.md  INTEGRATION.md  INTEGRATION_GUIDE.md  OPENVM_LOCAL_TESTING_GUIDE.md  PROVING_INTEGRATION_GUIDE.md  README.md  RESULTS_TRACKING.md  STATUS.md  airbender-diff.patch  breakage-snippets.md  config.json  dashboard.sh  debut.md  drop-last-run.sh  entrypoint.sh  ere  index-arch.html  index-extra.html  index.html  jolt  jolt-diff.patch  libs-and-build-commands.md  openvm  openvm-diff.patch  openvm.toml  pico  pico-diff.patch  r0vm-diff.patch  risc0  riscv-arch-test  run  sp1  sp1-diff.patch  staleness.md  (+5 more)
.cursor/: README.md  architecture.md  development_guide.md  docker_setup.md  jolt_plugin_component.md  openvm_plugin_component.md  plugins-sail_cSim-env.md  plugins_sp1_env.md  project_overview.md  sail_cSim_plugin_component.md  sp1-plugin.md  spike_plugin.md  testing_framework.md  usage_guide.md
act4-runner/: .gitignore  Cargo.toml
act4-runner/src/: backends.rs  elf_utils.rs  main.rs  results.rs  runner.rs
ai_notes/: act4-migration.md  act4-overview.md  act4-vs-riscof-zisk.md  execution-to-proving-migration.md  jolt-failures.md  jolt-proving-debug.md  memalign-investigation.md  new-zkvm-integration.md  sp1-pico-jalr-failure.md  zisk-fence-failure.md  zisk-issues.md  zisk-riscof-vs-act4-compliance.md
ai_plans/: act4-airbender.md  act4-multi-zkvm-plan.md  r0vm-act4.md  (+14 more)
docker/build-openvm/openvm-elf-runner/: Cargo.toml
docker/build-openvm/openvm-elf-runner/src/: main.rs
(+419 files in other folders)
