[package]
name = "openvm-binary"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openvm-binary"
path = "src/main.rs"

[dependencies]
openvm-sdk = { git = "https://github.com/openvm-org/openvm", rev = "4d410f21fd90a05e7f31627bdd51fbe57a4580a5" }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false }
